# pdrtpa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: aiger.hpp  aiger_builder.cpp  aiger_builder.hpp  logger.hpp  logic.hpp  main.cpp  simplifier.cpp  simplifier.hpp  solver.hpp  transition_system.hpp  verifier.cpp  verifier.hpp  verifier_split.cpp  verifier_split.hpp
test/: .clang-tidy  CMakeLists.txt  aiger_builder.cpp  common.hpp  logic.cpp  transition_system.cpp  verifier.cpp  verifier_split.cpp
